# AuthlyBot

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
authlybot/: bot.py  test_commands.py
